--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
     --text-color: #444;
     --gradient: linear-gradient(#31344d, #8c90ac)
 }
+
+
 html::-webkit-scrollbar{
     width: 0.5rem;
 }
@@ -70,6 +72,10 @@ header{
 .navbar a:hover::after {
     width: 100%;
 }
+.navbar.active {
+    display: flex;
+}
+
 #menu-icon{
     font-size: 24px;
     cursor: pointer;
@@ -89,6 +95,96 @@ header{
 .header-btn .sign-in:hover{
     background: #1d33f1;
 }
+/*Krahjeta*/
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+header nav {
+    margin: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #007BFF;
+    margin: 0 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.modal{
+display: none;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.5);
+justify-content: center;
+align-items: center;
+
+
+}
+.modal.show{
+    display: flex;
+}
+.modal-content{
+background-color: #fff;
+padding: 20px;
+border-radius: 5px;
+width: 80%;
+max-width: 400px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+}
+.modal-content h2{
+    margin-top: 0;
+}
+.modal-content label{
+
+    display: block;
+    margin: 10px 0 5px;
+    text-align: left;
+}
+.modal-content input{
+
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.modal-content button{
+
+    background-color: #007BFF;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.modal-content button:hover{
+    background-color: #0056b3;
+
+}
+.close{
+
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+    color: #333;
+}
+.close:hover{
+    color: red;
+}
+
 /*krahjeta*/
 .home{
 
@@ -102,6 +198,8 @@ background-size: auto;
 display: grid;
 align-items: center;
 grid-template-columns: repeat(2, 1fr);
+z-index: -1;
+
 }
 .text h1{
     font-size: 3.5rem;
@@ -120,6 +218,7 @@ grid-template-columns: repeat(2, 1fr);
     width: 100px ;
     margin-right: 1rem;
     cursor: pointer;
+    align-items: right;
 }
 
 
