--- a/style.css
+++ b/style.css
@@ -191,15 +191,25 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 width: 100%;
 min-height: 100vh;
 position: relative;
-background: url(Bugatti.jpg)  ;
-background-repeat: no-repeat;
-background-position: right;
+background: url(Bugatti.jpg) no-repeat ;
+background-position: right 60px center;
 background-size: auto;
+padding-right: 50px;
 display: grid;
 align-items: center;
 grid-template-columns: repeat(2, 1fr);
 z-index: -1;
 
+}
+.home{
+    margin-right: 50px;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    text-align: left;
 }
 
 .text h1{
