--- a/style.css
+++ b/style.css
@@ -276,14 +276,29 @@ z-index: -1;
 .form-container from .btn:hover{
     background: var(--main-color);
 }
-.input-box .icon{
+.input-container{
+    position: relative;
+    width: 100%;
+}
+.input-container .icon{
     position: absolute;
-    top: 50%;
-    right: 20px;
+    top: 40%;
+    left: 10px;
     transform: translateY(-50%);
-    color: #fff;
-    width: 17px;
-    height: 17px;
+    color: var(--main-color);
+    font-size: 1.2rem;
+}
+.input-container input{
+    width: 100%;
+    padding: 10px 10px 10px 35px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1rem;
+}
+.input-container input:focus{
+    border-color: var(--main-color);
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 
