--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 width: 100%;
 min-height: 100vh;
 position: relative;
-background: url(Bugatti.jpg) no-repeat ;
+background: url(car.jpg) no-repeat ;
 background-position: right 85px center;
 background-size: auto;
 padding-right: 50px;
