--- a/style.css
+++ b/style.css
@@ -191,9 +191,9 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 width: 100%;
 min-height: 100vh;
 position: relative;
-background: url(car.jpg) no-repeat ;
-background-position: right 85px center;
-background-size: auto;
+background: url(por.JPEG) no-repeat ;
+background-position: center;
+background-size: cover;
 padding-right: 50px;
 display: grid;
 align-items: center;
