--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ z-index: -1;
     border-radius: 0.5rem;
     font-size: 1rem;
 }
-.form-container from .btn{
+.form-container form .btn{
     flex: 1 1 7rem;
     padding: 10px 34px;
     border: none;
@@ -273,7 +273,7 @@ z-index: -1;
     font-size: 1rem;
     font-weight: 500;
 }
-.form-container from .btn:hover{
+.form-container form .btn:hover{
     background: var(--main-color);
 }
 .input-container{
@@ -301,7 +301,58 @@ z-index: -1;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
-
+/*elzaservices*/
+.services-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.services-container .box{
+    padding: 10px;
+    border-radius: 1rem;
+    box-shadow: 1px 4px 41px rgba(0, 0, 0, 0.1)
+}
+.services-container .box .box-img{
+    width: 100%;
+    height: 200px;
+}
+.services-container .box .box-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    object-fit: cover;
+    object-position: center;
+}
+.services-container .box p{
+    padding: 0 10px;
+    border: 1px solid var(--text-color);
+    width: 58px;
+    border-radius: 0.5rem;
+    margin: 1rem 0 1rem;
+}
+.services-container .box h2{
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--main-color);
+    margin: 0.2rem 0 0.5rem;
+}
+.services-container .box h2 span{
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.services-container .box .btn{
+    display: flex;
+    justify-content: center;
+    background: var(--main-color);
+    color: #fff;
+    padding: 10px;
+    border-radius: 0.5rem;
+}
+.services-container .box .btn:hover{
+    background: #1d33f1;
+}
 
 /*elzaabout*/
 .about-container{
