--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header{
 }
 .logo img{
     width: 120px;
-    height: auto;
+    height: 50px;
 }
 .navbar{
     display: flex;
@@ -287,7 +287,6 @@ z-index: -1;
     background: #fff;
     padding: 20px;
     border-radius: 0.5rem;
-    
 
 }
 .input-box{
@@ -457,4 +456,85 @@ z-index: -1;
     border-radius: 0.5rem;
     color: var(--main-color);
 }
-/*----------------------------*/
+/*elzareviews*/
+.reviews-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.rev-img{
+    width: 70px;
+    height: 70px;
+}
+.rev-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    border: 2px solid var(--second-color);
+}
+.reviews-container .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 1px 4px 41px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+}
+.reviews-container .box h2{
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin: 0.5rem 0 0.5rem;
+}
+.reviews-container .box p{
+    font-style: italic;
+}
+.reviews-container .box .stars .bx{
+    color: var(--main-color);
+}
+.newsletter{
+    background: linear-gradient(to top right, #444, #78828c);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.newsletter h2{
+    color: #fff;
+    font-size: 1.8rem;
+}
+.newsletter .box{
+    margin-top: 1rem;
+    background: #fff;
+    border-radius: 0.5rem;
+    padding: 4px 8px;
+    width: 350px;
+    display: flex;
+    justify-content: space-between;
+}
+.newsletter .box input{
+    border: none;
+    outline: none;
+}
+.newsletter .box .btn{
+    background: var(--main-color);
+    color: #fff;
+    padding: 8px 20px;
+    border-radius: 0.5rem;
+}
+.newsletter .box .btn:hover{
+    background: #1d33f1;
+}
+.copyright{
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.social a{
+    color: #444;
+    padding: 10px;
+    font-size: 15px;
+}
