--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ header{
 }
 .nav-profil ul{
 position: absolute;
-top: 125%;
+top: 40px;
 right: 0;
 display: flex;
 flex-direction: column;
@@ -735,4 +735,28 @@ footer {
     text-align: center;
     padding: 0.3rem;
     background-color: #f4f4f4;
+}
+.next-btn {
+    right: 12px;
+}
+.prev-btn {
+    left: 12px;
+}
+.carousel-btn {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    z-index: 2;
+    width: 45px;
+    height: 45px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
 }
