--- a/style.css
+++ b/style.css
@@ -525,26 +525,29 @@ z-index: -1;
 }
 
 /* Carousel buttons */
+.next-btn {
+    right: 12px;
+}
+.prev-btn {
+    left: 12px;
+}
 .carousel-btn {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translate(0, -50%);
     background: rgba(0, 0, 0, 0.5);
     color: white;
     border: none;
-    font-size: 24px;
     padding: 10px;
     cursor: pointer;
     border-radius: 50%;
-    z-index: 2;
-}
-
-.prev-btn {
-    left: 10px;
-}
-
-.next-btn {
-    right: 10px;
+    z-index: 1;
+    width: 45px;
+    height: 45px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
 }
 
 .carousel-btn:hover {
@@ -736,27 +739,7 @@ footer {
     padding: 0.5rem;
     background-color: #f4f4f4;
 }
-.next-btn {
-    right: 12px;
-}
-.prev-btn {
-    left: 12px;
-}
-.carousel-btn {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 50%;
-    z-index: 2;
-    width: 45px;
-    height: 45px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
+#rentModal {
+    z-index: 10; 
+    position: absolute; 
 }
