--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 .close:hover{
     color: red;
 }
-/* Centered Notification styling */
+
 #notificationBox {
     position: fixed;
     top: 50%;
@@ -524,7 +524,7 @@ z-index: -1;
     background: #1d33f1;
 }
 
-/* Carousel buttons */
+
 .next-btn {
     right: 12px;
 }
@@ -717,21 +717,20 @@ z-index: -1;
     font-size: 15px;
 }
 .modal {
-    display: none; /* Initially hidden */
-    /* Add other modal styling here */
+    display: none; 
 }
 
 .modal.active {
-    display: flex; /* Display when the 'active' class is added */
+    display: flex; 
 }
 .page-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Full viewport height */
+    min-height: 100vh; 
 }
 
 .content {
-    flex: 1; /* Take up remaining space */
+    flex: 1; 
 }
 
 footer {
@@ -742,4 +741,16 @@ footer {
 #rentModal {
     z-index: 10; 
     position: absolute; 
+}
+#notification {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 15px;
+    background-color: green;
+    color: white;
+    border-radius: 5px;
+    font-size: 16px;
+    z-index: 1000;
+    display: none;
 }
